Update component links in typography.mdx

--- a/pages/Variants/typography.mdx
+++ b/pages/Variants/typography.mdx
@@ -9,7 +9,7 @@ import { Callout } from "nextra/components";
 
 ## Composing type
 
-Use [Text](/Typography/text) and [Heading](/themes/docs/components/heading) components to render titles and body copy. These components share `size` and `weight` props and map to the underlying type system to ensure consistent typography throughout your app.
+Use [Text](/Typography/text) and [Heading](/Typography/heading) components to render titles and body copy. These components share `size` and `weight` props and map to the underlying type system to ensure consistent typography throughout your app.
 
 ```jsx live=true
 <Heading mb="2" size="xl">Typographic principles</Heading>
@@ -18,7 +18,7 @@ Use [Text](/Typography/text) and [Heading](/themes/docs/components/heading) comp
 
 ### Formatting
 
-Compose formatting components to add [emphasis](/themes/docs/components/em), [signal importance](/themes/docs/components/strong), present [code](/themes/docs/components/code) and more.
+Compose formatting components to add [emphasis](/Typography/em), [signal importance](/Typography/strong), present [code](/Typography/code) and more.
 
 ```jsx live=true
 <Text>
