Add Callout component and update file tree in getting-started page

--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -1,12 +1,13 @@
 import { Steps } from "nextra/components";
 import { FileTree } from "nextra/components";
+import { Callout } from "nextra/components";
 
 # Getting Started
 
 Start building your project in minutes.
 
 <Steps>
-### Install the necessary dependencies
+### 📦 Install the necessary dependencies
 
 Install `class-variance-authority`, `clsx`, `tailwind-merge` utility packages by running:
 
@@ -14,22 +15,24 @@ Install `class-variance-authority`, `clsx`, `tailwind-merge` utility packages by
 npm install class-variance-authority clsx tailwind-merge
 ```
 
-### `@radix-ui` primitives
+### 🪄 `@radix-ui` primitives
 
 Now install necessary `@radix-ui` packages by running:
 
-```sh copy npm2yarn 
+```sh copy npm2yarn
 npm install @radix-ui/react-slot
 ```
 
-### Get the necessary files
+### 📂 Get the necessary files
 
 Now download the **components**, **lib** and **hooks** folders from the [GitHub repository](https://github.com/Tarikul-Islam-Anik/oxyzen-ui/) and paste them into your project root directory.
 
-{" "}
+<Callout type="info" emoji="ℹ️">
+  Click on the folder name to expand the folder.
+</Callout>
 
 <FileTree>
-  <FileTree.Folder name="components" defaultOpen>
+  <FileTree.Folder name="components">
     <FileTree.Folder name="layout">
       <FileTree.File name="box.tsx" />
       <FileTree.File name="container.tsx" />
@@ -40,16 +43,27 @@ Now download the **components**, **lib** and **hooks** folders from the [GitHub 
     </FileTree.Folder>
     <FileTree.Folder name="typography">
       <FileTree.File name="blockquote.tsx" />
+      <FileTree.File name="code.tsx" />
       <FileTree.File name="em.tsx" />
       <FileTree.File name="heading.tsx" />
+      <FileTree.File name="kbd.tsx" />
+      <FileTree.File name="quote.tsx" />
       <FileTree.File name="strong.tsx" />
       <FileTree.File name="text.tsx" />
       <FileTree.File name="variants.ts" />
     </FileTree.Folder>
   </FileTree.Folder>
+  <FileTree.Folder name="context">
+    <FileTree.File name="buil-provider-tree.tsx" />
+  </FileTree.Folder>
+  <FileTree.Folder name="hooks">
+    <FileTree.File name="use-array-state.ts" />
+    <FileTree.File name="use-local-storage.ts" />
+    <FileTree.File name="use-media-query.ts" />
+    <FileTree.File name="use-scroll.ts" />
+  </FileTree.Folder>
   <FileTree.Folder name="lib">
     <FileTree.File name="utils.ts" />
   </FileTree.Folder>
 </FileTree>
-
 </Steps>
