Update introduction and add background story and planned features

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,10 +1,8 @@
 import { Callout } from "nextra/components";
 
-# Introduction
+# 👋 Introduction
 
-Hello, and welcome to the documentation for `@oxyzen-ui` library. Its a simple and Handpicked UI Components, Hooks and Utilities for React.
-
-This library is a collection of React components, hooks and utilities that are easy to use. It was mainly created to be used in my personal projects, but I decided to share it with the community.
+Hello, and welcome to the documentation for `@oxyzen-ui` library. Its a simple and Handpicked UI Components, Hooks and Utilities for [React](https://reactjs.org/) built with [Tailwind CSS](https://tailwindcss.com/) and [Radix Primitives](https://www.radix-ui.com/docs/primitives/overview/introduction).
 
 <Callout type="info" emoji="ℹ️">
   **Note:** This library is still in development, so there may be some bugs.
@@ -13,3 +11,34 @@ This library is a collection of React components, hooks and utilities that are e
   report them in the
   [issues](https://github.com/Tarikul-Islam-Anik/oxyzen-ui/issues) section.
 </Callout>
+
+## 📖 Background Story
+
+I was working on a project and I needed a simple UI library. I didn't want to use any of the existing UI libraries because they were too big and I didn't need most of the components. So, I decided to create my own library. I started with a few components and hooks, but then I realized that I was copy-pasting the same components and hooks in every project. So, I decided to create a library that I can use in all my projects.
+
+I also wanted to make the components highly accessible and customizable. So, I decided to use the [Radix Primitives](https://www.radix-ui.com/docs/primitives/overview/introduction).
+
+But there is no way to use the Radix Primitives with Tailwind CSS. So, I decided to create a library that will allow me to use the Radix Primitives with Tailwind CSS.
+
+## 🔍 What's inside?
+
+This library contains a collection of React components, hooks and utilities that are easy to use. It was mainly created to be used in my personal projects, but I decided to share it with the community.
+
+I'm gonna make some of my own bits and pieces, like components, hooks, and tools. Plus, I'll snatch a few good ones from the open-source world and add 'em into the mix in this library.
+
+I'll be tossing in some pro tips and smart moves I've picked up along the way.
+
+## ❗Don't be mistaken
+
+This is not a UI framework or full component library. This is just a collection of components, hooks and utilities that I use in my projects. I created this library because I was tired of copy-pasting the same components and hooks in every project.
+
+## ✨ Planned Features
+
+<br />
+
+- [ ] CLI
+- [ ] Adding essential UI Components
+- [ ] More Hooks
+- [ ] More Utilities
+- [ ] Refine documentation
+- [ ] Custom Themes
