Add Cards and Card component for displaying source code link

--- a/pages/typography.mdx
+++ b/pages/typography.mdx
@@ -1,4 +1,6 @@
 import { Callout } from "nextra/components";
+import { Cards, Card } from "nextra/components";
+import { CodeBracketIcon } from "@heroicons/react/24/solid";
 
 # Typography Variants
 
@@ -6,6 +8,14 @@ import { Callout } from "nextra/components";
   You can always modify the existing typography variants or add new ones by
   editing the `components/typography/variants.ts` file.
 </Callout>
+
+<Cards>
+  <Card
+    icon={<CodeBracketIcon />}
+    title="View Source"
+    href="https://github.com/Tarikul-Islam-Anik/oxyzen-ui/blob/main/components/typography/variants.ts"
+  />
+</Cards>
 
 ## Composing type
 
