--- a/pages/use-array-state.mdx
+++ b/pages/use-array-state.mdx
@@ -1,6 +1,17 @@
+import { Cards, Card } from "nextra/components";
+import { CodeBracketIcon } from "@heroicons/react/24/solid";
+
 # useArrayState
 
 `useArrayState` is a custom React hook that provides a convenient way to manage an array state.
+
+<Cards>
+  <Card
+    icon={<CodeBracketIcon />}
+    title="View Source"
+    href="https://github.com/Tarikul-Islam-Anik/oxyzen-ui/blob/main/hooks/use-array-state.ts"
+  />
+</Cards>
 
 ## API Reference
 
