--- a/pages/use-local-storage.mdx
+++ b/pages/use-local-storage.mdx
@@ -1,6 +1,17 @@
+import { Cards, Card } from "nextra/components";
+import { CodeBracketIcon } from "@heroicons/react/24/solid";
+
 # useLocalStorage
 
 The `useLocalStorage` hook is a custom React hook that allows you to add state persistence to your React state by storing it in local storage.
+
+<Cards>
+  <Card
+    icon={<CodeBracketIcon />}
+    title="View Source"
+    href="https://github.com/Tarikul-Islam-Anik/oxyzen-ui/blob/main/hooks/use-local-storage.ts"
+  />
+</Cards>
 
 ## API Reference
 
