--- a/pages/use-media-query.mdx
+++ b/pages/use-media-query.mdx
@@ -1,6 +1,17 @@
+import { Cards, Card } from "nextra/components";
+import { CodeBracketIcon } from "@heroicons/react/24/solid";
+
 # useMediaQuery
 
 The `useMediaQuery` hook is a React hook that provides information about the device type and dimensions based on the screen size.
+
+<Cards>
+  <Card
+    icon={<CodeBracketIcon />}
+    title="View Source"
+    href="https://github.com/Tarikul-Islam-Anik/oxyzen-ui/blob/main/hooks/use-media-query.ts"
+  />
+</Cards>
 
 ## API Reference
 
