--- a/pages/use-scroll.mdx
+++ b/pages/use-scroll.mdx
@@ -1,6 +1,17 @@
+import { Cards, Card } from "nextra/components";
+import { CodeBracketIcon } from "@heroicons/react/24/solid";
+
 # useScroll Hook
 
 `useScroll` is a custom React hook that allows you to track whether the user has scrolled past a certain threshold.
+
+<Cards>
+  <Card
+    icon={<CodeBracketIcon />}
+    title="View Source"
+    href="https://github.com/Tarikul-Islam-Anik/oxyzen-ui/blob/main/hooks/use-scroll.ts"
+  />
+</Cards>
 
 ## API Reference
 
